Made python read serial data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pyautogui>=0.9.54",
     "pyserial>=3.5",
+    "pyyaml>=6.0.2",
 ]
